# python-uv-mypy-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/rules/: uv-mypy.mdc
.github/workflows/: python-tests.yml
src/common/test_module/: my_test_class.py
tests/common/test_module/: test_my_test_class.py
